# gcm-api

./: Dockerfile  README.md  db.sqlite3  hadolint.yaml  manage.py  pyproject.toml
.github/workflows/: build.yml  docker.yml  snyk.yml  tag.yml  unit.yml  upload-artifact.yml
account/: apps.py  models.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_account_number_alter_account_balance.py  0003_alter_account_number.py  0004_account_account_type.py  0005_remove_account_name_account_points_and_more.py
account/templates/account/: check_account.html  check_balance.html  create_account.html  credit.html  debit.html  menu.html  transfer.html  yield_interest.html
gcm/: asgi.py  settings.py  urls.py  wsgi.py
