[tool.poetry]
name = "gcm"
version = "0.1.0"
description = ""
authors = ["Paulo Vanzolini, Giovanna Karla e José de Sousa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
